--- a/documentation.adoc
+++ b/documentation.adoc
@@ -60,7 +60,7 @@ include::/home/travis/build/database-rider/database-rider/rider-core/target/test
 |0
 |0
 |4
-|01s 164ms
+|968ms
 |[green]#*passed*#
 
 12+^|*<<Manage-database-with-Database-Rider-Cucumber>>*
@@ -74,7 +74,7 @@ include::/home/travis/build/database-rider/database-rider/rider-core/target/test
 |0
 |0
 |5
-|001ms
+|000ms
 |[green]#*passed*#
 
 12+^|*<<Manage-database-with-Database-Rider-and-JUnit-5>>*
@@ -119,7 +119,7 @@ include::/home/travis/build/database-rider/database-rider/rider-core/target/test
 |000ms
 |[green]#*passed*#
 12+^|*Totals*
-|11|0|11|39|0|0|0|0|0|39 2+|01s 167ms
+|11|0|11|39|0|0|0|0|0|39 2+|970ms
 |===
 
 == *Features*
@@ -270,7 +270,7 @@ include::../../../pom.xml[tags=version]
 ****
 Given ::
 =====
-DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(01s 164ms)#
+DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(968ms)#
 ******
 
 [discrete]
@@ -408,7 +408,7 @@ To use this module just add the following maven dependency:
 ****
 Given ::
 =====
-The following feature icon:thumbs-up[role="green",title="Passed"] [small right]#(001ms)#
+The following feature icon:thumbs-up[role="green",title="Passed"] [small right]#(000ms)#
 ******
 
 ----
