Publishing Database Rider 1.0.0-RC2-SNAPSHOT living documentation.

--- a/1.0.0-RC2-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC2-SNAPSHOT/documentation.adoc
@@ -164,7 +164,7 @@ include::../../../pom.xml[tags=version]
 ****
 Given ::
 =====
-DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(01s 234ms)#
+DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(824ms)#
 ******
 
 [discrete]
@@ -528,7 +528,7 @@ NOTE: Javascript engine comes within JDK so no additional classpath dependency i
 ****
 Given ::
 =====
-The following dataset icon:thumbs-up[role="green",title="Passed"] [small right]#(000ms)#
+The following dataset icon:thumbs-up[role="green",title="Passed"] [small right]#(003ms)#
 ******
 
 ----
