--- a/1.0.0-RC1/documentation.adoc
+++ b/1.0.0-RC1/documentation.adoc
@@ -164,7 +164,7 @@ include::../../../../pom.xml[tags=version]
 ****
 Given ::
 =====
-DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(01s 171ms)#
+DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(817ms)#
 ******
 
 [discrete]
