--- a/README.adoc
+++ b/README.adoc
@@ -146,24 +146,12 @@ NOTE: <<EntityManagerProvider>> is a simple JUnit rule that creates a JPA entity
 
 == Documentation
 
-A getting started guide can be found here http://database-rider.github.io/database-rider-sample/database-rider.html.
+A getting started guide can be found here http://database-rider.github.io/getting-started/getting-started.html.
 
 For main features overview see project living documentation (of each project version):
 
 http://database-rider.github.io/database-rider/index.html.
 
-=== Examples
-
-There are a lot of examples that can also be used as documentation.
-
-The examples module which contains:
-
-* https://github.com/database-rider/database-rider/tree/master/rider-examples/jpa-productivity-boosters[JPA productivity boosters^]
-* https://github.com/database-rider/database-rider/tree/master/rider-examples/dbunit-tomee-appcomposer-sample[DBUnit Application Composer^]
-* https://github.com/database-rider/database-rider/tree/master/rider-examples/jOOQ-DBUnit-flyway-example/[jOOQ Flyway DBUnit^]
-* https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample/[SpringBoot Data DBUnit^]
-
-And also each module contain a lot of tests that you can use as example.
 
 == Rider Core
 
@@ -1078,7 +1066,18 @@ You can also export DataSets without `@ExportDataSet` by using DataSetExporter c
     }
 ----
 
+== Examples
 
+There are a lot of examples that can also be used as documentation.
+
+The examples module which contains:
+
+* https://github.com/database-rider/database-rider/tree/master/rider-examples/jpa-productivity-boosters[JPA productivity boosters^]
+* https://github.com/database-rider/database-rider/tree/master/rider-examples/dbunit-tomee-appcomposer-sample[DBUnit Application Composer^]
+* https://github.com/database-rider/database-rider/tree/master/rider-examples/jOOQ-DBUnit-flyway-example/[jOOQ Flyway DBUnit^]
+* https://github.com/database-rider/database-rider/tree/master/rider-examples/spring-boot-dbunit-sample/[SpringBoot Data DBUnit^]
+
+And also each module contain a lot of tests that you can use as example.
 
 == Snapshots
 
