Publishing Database Rider 1.0.0-RC2-SNAPSHOT living documentation.

--- a/1.0.0-RC2-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC2-SNAPSHOT/documentation.adoc
@@ -164,7 +164,7 @@ include::../../../../pom.xml[tags=version]
 ****
 Given ::
 =====
-DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(917ms)#
+DBUnit interceptor is enabled in your test beans.xml: icon:thumbs-up[role="green",title="Passed"] [small right]#(03s 830ms)#
 ******
 
 [discrete]
