--- a/1.0.0-RC3-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC3-SNAPSHOT/documentation.adoc
@@ -18,27 +18,35 @@
 include::/home/travis/build/database-rider/database-rider/rider-core/target/test-classes/cukedoctor-intro.adoc[leveloffset=+1]
 
 
-[[Manage-database-with-Database-Rider-Core, Manage database with Database Rider Core]]
-== *Manage database with Database Rider Core*
+[[Seeding-database, Seeding database]]
+== *Seeding database*
 
 ****
 ====
 [quote]
 ____
-In order to manage database state in JUnit tests
+In order to insert data into database
 As a developer
-I want to use DBUnit in my tests.
+I want to easily use DBUnit in JUnit tests.
 ____
 ====
 
-Database Rider Core module brings http://dbunit.sourceforge.net/[DBunit^] to your unit tests via https://github.com/junit-team/junit4/wiki/Rules[JUnit rules^].
+Database Rider brings http://dbunit.sourceforge.net/[DBunit^] to your http://junit.org/junit4/[JUnit tests] via https://github.com/junit-team/junit4/wiki/Rules[JUnit rules^] (in JUnit4), through a https://docs.jboss.org/weld/reference/latest/en-US/html_single/#interceptors[CDI interceptor^] (in `CDI` based tests) or by an http://junit.org/junit5/docs/current/user-guide/#extensions[extension^] (in case of `JUnit5` tests).
+****
+
+=== Seed database in a JUnit 4 test
+
+JUnit4 is integrated with DBUnit by means of a https://github.com/junit-team/junit4/wiki/Rules[JUnit rule^] called `DBUnitRule` which just needs a https://docs.oracle.com/javase/tutorial/jdbc/[JDBC^] connection in order to be created.
+
+This rule just reads *@Dataset* annotation in order to prepare the database state using DBUnit behind the scenes.
+
 
 [discrete]
 === *Dependencies*
 
 To use it just add the following maven dependency:
 
-[source,xml,indent=0]
+[source,xml]
 ----
 <dependency>
    <groupId>com.github.database-rider</groupId>
@@ -47,9 +55,6 @@ include::../../../../pom.xml[tags=version]
    <scope>test</scope>
 </dependency>
 ----
-****
-
-=== Seed database using yml dataset
 
 ****
 Given ::
@@ -66,7 +71,7 @@ include::../../../src/test/java/com/github/database/rider/core/DatabaseRiderIt.j
 }
 ----
 [discrete]
-<1> https://github.com/database-rider/database-rider/blob/master/rider-core/src/main/java/com/github/database/rider/core/util/EntityManagerProvider.java[EntityManagerProvider^] is a simple Junit rule that creates a JPA entityManager for each test. DBUnit rule don’t depend on EntityManagerProvider, it only needs a *JDBC connection*.
+<1> `EntityManagerProvider` is a simple Junit rule that creates a JPA entityManager for each test. DBUnit rule don’t depend on EntityManagerProvider, it only needs a *JDBC connection*.
 [discrete]
 <2> DBUnit rule responsible for reading `@DataSet` annotation and prepare the database for each test.
 
@@ -326,7 +331,7 @@ The following Cucumber test icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,linenums]
+[source,java]
 ----
 include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/ContactFeature.java[]
 ----
@@ -341,7 +346,7 @@ The following cucumber steps are executed icon:thumbs-up[role="green",title="Pas
 ******
 
 [discrete]
-[source,java,linenums]
+[source,java]
 ----
 include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/ContactSteps.java[]
 ----
@@ -417,7 +422,7 @@ The following junit5 test is executed icon:thumbs-up[role="green",title="Passed"
 ******
 
 [discrete]
-[source,java,linenums]
+[source,java]
 ----
 include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5/DBUnitJUnit5It.java[tags=declaration;connectionField;test]
 ----
@@ -504,7 +509,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ScriptReplacementsIt.java[tags=groovy]
 ----
@@ -547,7 +552,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,linenums,indent=0]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ScriptReplacementsIt.java[tags=javascript-likes]
 ----
@@ -604,7 +609,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ExpectedDataSetIt.java[tags=expectedDeclaration;expected]
 ----
@@ -645,7 +650,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ExpectedDataSetIt.java[tags=expectedRegex]
 ----
@@ -699,7 +704,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ExpectedDataSetIt.java[tags=expectedWithSeeding]
 ----
@@ -738,7 +743,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/ExpectedDataSetIt.java[tags=faillingExpected]
 ----
@@ -785,7 +790,7 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 ******
 
 [discrete]
-[source,java,indent=0,linenums]
+[source,java,indent=0]
 ----
 include::../../../src/test/java/com/github/database/rider/core/TransactionIt.java[tags=transaction]
 ----
