--- a/1.0.0-RC3-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC3-SNAPSHOT/documentation.adoc
@@ -33,22 +33,21 @@ ____
 
 Database Rider brings http://dbunit.sourceforge.net/[DBunit^] to your http://junit.org/junit4/[JUnit tests] by means of:
 
-* https://github.com/junit-team/junit4/wiki/Rules[JUnit rules^] (in JUnit4);
+* https://github.com/junit-team/junit4/wiki/Rules[JUnit rules^] (in JUnit4 tests);
 * https://docs.jboss.org/weld/reference/latest/en-US/html_single/#interceptors[CDI interceptor^] (in `CDI` based tests)
-* http://junit.org/junit5/docs/current/user-guide/#extensions[extension^] (in case of `JUnit5`).
+* http://junit.org/junit5/docs/current/user-guide/#extensions[JUnit5 extension^].
 ****
 
-=== Seed database in a JUnit 4 test
+=== Seeding database with `DBUnit Rule`
 
-JUnit4 is integrated with DBUnit by means of a https://github.com/junit-team/junit4/wiki/Rules[JUnit rule^] called `DBUnitRule` which just needs a https://docs.oracle.com/javase/tutorial/jdbc/[JDBC^] connection in order to be created.
+JUnit4 integrates with DBUnit through a https://github.com/junit-team/junit4/wiki/Rules[JUnit rule^] called `DBUnitRule` which reads *@Dataset* annotations in order to prepare the database state using DBUnit behind the scenes.
 
-This rule just reads *@Dataset* annotation in order to prepare the database state using DBUnit behind the scenes.
-
+NOTE: The rule just needs a https://docs.oracle.com/javase/tutorial/jdbc/[JDBC^] connection in order to be created.
 
 [discrete]
 === *Dependencies*
 
-To use it just add the following maven dependency:
+To use it add the following maven dependency:
 
 [source,xml]
 ----
@@ -77,7 +76,7 @@ include::../../../src/test/java/com/github/database/rider/core/DatabaseRiderIt.j
 [discrete]
 <1> `EntityManagerProvider` is a simple Junit rule that creates a JPA entityManager for each test. DBUnit rule don’t depend on EntityManagerProvider, it only needs a *JDBC connection*.
 [discrete]
-<2> DBUnit rule responsible for reading `@DataSet` annotation and prepare the database for each test.
+<2> DBUnit rule is responsible for reading `@DataSet` annotation and prepare the database for each test.
 
 
 ******
@@ -121,54 +120,24 @@ The database should be seeded with the dataset content before test execution ico
 =====
 ****
 
-[[Manage-database-with-Database-Rider-CDI, Manage database with Database Rider CDI]]
-== *Manage database with Database Rider CDI*
+=== Seed database with `DBUnit Interceptor`
 
-****
-====
-[quote]
-____
-In order to manage database state in *CDI* based tests
-As a developer
-I want to use DBUnit in a CDI test environment.
-____
-====
-
-DBUnit CDI integration is done through a https://docs.jboss.org/weld/reference/latest/en-US/html_single/#interceptors[CDI interceptor^] which reads `@DataSet` to prepare database for CDI based tests.
-
-[IMPORTANT]
-=====
-CDI must be enabled in your test, see the following example:
-
-[source, java]
-----
-@RunWith(CdiTestRunner.class) <1>
-@DBUnitInterceptor <2>
-public class DBUnitCDITest {
-
-}
-----
-<1> https://deltaspike.apache.org/documentation/test-control.html[CdiTestRunner^] is provided by https://deltaspike.apache.org[Apache Deltaspike^] but you should be able to use other CDI test runners.
-<2> Needed to activate DBUnit interceptor
-=====
+DBUnit CDIfootnote:[http://docs.oracle.com/javaee/6/tutorial/doc/giwhb.html[Contexts and dependency for the Java EE^]] integration is done through a https://docs.jboss.org/weld/reference/latest/en-US/html_single/#interceptors[CDI interceptor^] which reads `@DataSet` to prepare database in CDI tests.
 
 [discrete]
 === *Dependencies*
 
 To use this module just add the following maven dependency:
 
-[source,xml,indent=0]
+[source,xml]
 ----
 <dependency>
-   <groupId>com.github.database-rider</groupId>
-   <artifactId>rider-cdi</artifactId>
+ <groupId>com.github.database-rider</groupId>
+ <artifactId>rider-cdi</artifactId>
 include::../../../../pom.xml[tags=version]
-   <scope>test</scope>
+ <scope>test</scope>
 </dependency>
 ----
-****
-
-=== Seed database using yml dataset
 
 ****
 Given ::
@@ -228,13 +197,97 @@ The following test is executed: icon:thumbs-up[role="green",title="Passed"]
 [discrete]
 [source,java]
 ----
+include::../../../../rider-cdi/src/test/java/com/github/database/rider/cdi/DBUnitCDIIt.java[tags=cdi-declaration]
 include::../../../../rider-cdi/src/test/java/com/github/database/rider/cdi/DBUnitCDIIt.java[tags=seedDatabase]
 ----
+[discrete]
+<1> https://deltaspike.apache.org/documentation/test-control.html[CdiTestRunner^] is provided by https://deltaspike.apache.org[Apache Deltaspike^] but you should be able to use other CDI test runners.
+[discrete]
+<2> Needed to activate DBUnit interceptor
 
 
 ******
 
 TIP: Source code of the above example can be https://github.com/database-rider/database-rider/blob/master/rider-cdi/src/test/java/com/github/database/rider/cdi/DBUnitCDIIt.java#L74[found here^].
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Seed database with `JUnit 5 extension`
+
+DBUnit is enabled in JUnit 5 tests through an http://junit.org/junit5/docs/current/user-guide/#extensions[extension^] named *DBUnitExtension*.
+
+[discrete]
+=== *Dependencies*
+
+To use the extension just add the following maven dependency:
+
+[source,xml]
+----
+<dependency>
+   <groupId>com.github.dbunit-rules</groupId>
+   <artifactId>junit5</artifactId>
+include::../../../../pom.xml[tags=version]
+   <scope>test</scope>
+</dependency>
+----
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/users.yml
+----
+include::../../../../rider-junit5/src/test/resources/datasets/users.yml[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following junit5 test is executed icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java]
+----
+include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5/DBUnitJUnit5It.java[tags=declaration;connectionField;test]
+----
+[discrete]
+<1> Enables DBUnit.
+[discrete]
+<2> JUnit 5 runner;
+[discrete]
+<3> As JUnit5 requires *Java8* you can use lambdas in your tests;
+[discrete]
+<4> DBUnitExtension will get connection by reflection so just declare a field or a method with `ConnectionHolder` as return type.
+
+
+******
+
+TIP: Source code of the above example can be https://github.com/database-rider/database-rider/blob/master/rider-junit5/src/test/java/com/github/database/rider/junit5/DBUnitJUnit5It.java/#L24[found here^].
+
+[TIP]
+====
+
+Another way to activate DBUnit in JUnits 5 test is using *@DBRider* annotation (at method or class level):
+[source,java]
+----
+
+include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5/DBRiderAnnotationIt.java[tags=junit5-annotation]
+----
+
+<1> Shortcut for `@Test` and `@ExtendWith(DBUnitExtension.class)`
+====
 
 =====
 Then ::
@@ -368,86 +421,6 @@ TIP: Source code for the example above can be https://github.com/database-rider/
 Then ::
 =====
 The database should be seeded with the dataset content before step execution icon:thumbs-up[role="green",title="Passed"]
-=====
-****
-
-[[Manage-database-with-Database-Rider-and-JUnit-5, Manage database with Database Rider and JUnit 5]]
-== *Manage database with Database Rider and JUnit 5*
-
-****
-====
-[quote]
-____
-In order to manage database state in http://junit.org/junit5/[JUnit 5^] integration tests
-As a developer
-I want to use DBUnit along side my JUnit 5 tests.
-____
-====
-
-DBUnit is enabled in JUnit 5 tests through an http://junit.org/junit5/docs/current/user-guide/#extensions[extension^] named *DBUnitExtension*.
-
-[discrete]
-=== *Dependencies*
-
-To use the extension just add the following maven dependency:
-
-[source,xml,indent=0]
-----
-<dependency>
-   <groupId>com.github.dbunit-rules</groupId>
-   <artifactId>junit5</artifactId>
-include::../../../../pom.xml[tags=version]
-   <scope>test</scope>
-</dependency>
-----
-****
-
-=== Seed database using Database Rider in JUnit5 tests
-
-****
-Given ::
-=====
-The following dataset icon:thumbs-up[role="green",title="Passed"]
-******
-
-[discrete]
-.src/test/resources/dataset/users.yml
-----
-include::../../../../rider-junit5/src/test/resources/datasets/users.yml[]
-----
-
-
-******
-
-=====
-When ::
-=====
-The following junit5 test is executed icon:thumbs-up[role="green",title="Passed"]
-******
-
-[discrete]
-[source,java]
-----
-include::../../../../rider-junit5/src/test/java/com/github/database/rider/junit5/DBUnitJUnit5It.java[tags=declaration;connectionField;test]
-----
-[discrete]
-<1> Enables DBUnit;
-[discrete]
-<2> JUnit 5 runner;
-[discrete]
-<3> As JUnit5 requires *Java8* you can use lambdas in your tests;
-[discrete]
-<4> DBUnitExtension will get connection by reflection so just declare a field or a method with `ConnectionHolder` as return type.
-
-
-******
-
-TIP: Source code of the above example can be https://github.com/database-rider/database-rider/blob/master/rider-junit5/src/test/java/com/github/database/rider/junit5/DBUnitJUnit5It.java/#L24[found here^].
-
-=====
-Then ::
-=====
-The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
 =====
 ****
 
