Publishing Database Rider 1.0.0-RC3-SNAPSHOT living documentation.

--- a/1.0.0-RC3-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC3-SNAPSHOT/documentation.adoc
@@ -304,7 +304,7 @@ This runner just starts CDI within your BDD tests so you just have to use <<_see
 
 [source,java]
 ----
-include::../../../src/test/java/com/github/database/rider/core/bdd/DatabaseRiderBdd.java[]
+include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/ContactFeature.java[]
 ----
 
 
@@ -314,7 +314,7 @@ IMPORTANT: As cucumber doesn't work with JUnit Rules, see https://github.com/cuc
 === *Dependencies*
 Here is a set of maven dependencies needed by Database Rider Cucumber:
 
-NOTE: Most of the dependencies, except CDI container implementation, are bring by Database Rider Cucumber module transitively.
+NOTE: Most of the dependencies, except CDI container implementation, are brought by Database Rider Cucumber module transitively.
 
 [source,xml]
 ----
@@ -338,7 +338,7 @@ include::../../../pom.xml[tags=cucumber-deps]
 ----
 include::../../../../rider-cdi/pom.xml[tags=deltaspike-cdi-deps]
 ----
-<2> Also comes with DBUit Rules Cucumber.
+<2> Also comes with Rider Cucumber.
 <3> You can use CDI implementation of your choice.
 
 ****
@@ -394,9 +394,11 @@ The following cucumber steps are executed icon:thumbs-up[role="green",title="Pas
 include::../../../../rider-examples/jpa-productivity-boosters/src/test/java/com/github/database/rider/examples/cucumber/ContactSteps.java[]
 ----
 [discrete]
-<1> As the Cucumber cdi runner enables CDI, you can use injection into your Cucumber steps.
+<1> Activates DBUnit CDI interceptor
 [discrete]
-<2> Dataset is prepared before step execution by `@DBUnitInterceptor`.
+<2> As the Cucumber cdi runner enables CDI, you can use injection into your Cucumber steps.
+[discrete]
+<3> Dataset is prepared before step execution by `@DBUnitInterceptor`.
 
 
 ******
