--- a/1.0.0-RC3-SNAPSHOT/documentation.adoc
+++ b/1.0.0-RC3-SNAPSHOT/documentation.adoc
@@ -25,7 +25,7 @@ include::/home/travis/build/database-rider/database-rider/rider-core/target/test
 ====
 [quote]
 ____
-In order to insert data into database
+In order to insert data into database before test execution
 As a developer
 I want to easily use DBUnit in JUnit tests.
 ____
@@ -38,7 +38,7 @@ Database Rider brings http://dbunit.sourceforge.net/[DBunit^] to your http://jun
 * http://junit.org/junit5/docs/current/user-guide/#extensions[JUnit5 extension^].
 ****
 
-=== Seeding database with `DBUnit Rule`
+=== Seed database with `DBUnit Rule`
 
 JUnit4 integrates with DBUnit through a https://github.com/junit-team/junit4/wiki/Rules[JUnit rule^] called `DBUnitRule` which reads *@Dataset* annotations in order to prepare the database state using DBUnit behind the scenes.
 
@@ -327,14 +327,14 @@ include::../../../../pom.xml[tags=version]
 ----
 
 .Cucumber dependencies
-[source,xml,ident=0]
+[source,xml,indent=0]
 ----
 include::../../../pom.xml[tags=cucumber-deps]
 ----
 <1> You don't need to declare because it comes with Database Rider Cucumber module dependency.
 
 .DeltaSpike and CDI dependency
-[source,xml,ident=0]
+[source,xml,indent=0]
 ----
 include::../../../../rider-cdi/pom.xml[tags=deltaspike-cdi-deps]
 ----
@@ -409,6 +409,250 @@ TIP: Source code for the example above can be https://github.com/database-rider/
 Then ::
 =====
 The database should be seeded with the dataset content before step execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+[[DataSet-creation, DataSet creation]]
+== *DataSet creation*
+
+****
+====
+[quote]
+____
+In order to create datasets to feed tables
+As a developer
+I want to declare database state in external files.
+____
+====
+
+NOTE: It is a good practice to move database preparation or any infrastructure code outside test logic, it increases test maintainability.
+****
+
+=== Creating a `YAML` dataset
+
+*YAML* stands for `yet another markup language` and is a very simple, lightweight yet powerful format.
+
+IMPORTANT: YAML is based on spaces indentation so be careful because any missing or additional space can lead to an incorrect dataset.
+
+TIP: Source code of the examples below can be https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java/[found here^].
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/yml/users.yml
+----
+include::../../../src/test/resources/datasets/yml/users.yml[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java[tags=yml]
+----
+
+
+******
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Creating a `JSON` dataset
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/json/users.json
+----
+include::../../../src/test/resources/datasets/json/users.json[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java[tags=json]
+----
+
+
+******
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Creating a `XML` dataset
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/xml/users.xml
+----
+include::../../../src/test/resources/datasets/xml/users.xml[]
+----
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java[tags=xml]
+----
+
+
+******
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Creating a `XLS` dataset
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/xls/users.xls
+----
+ID	NAME
+1	@realpestano
+2	@dbunit
+----
+[discrete]
+[discrete]
+NOTE: Each Excell `sheet` name is the *table name*, first row is *columns names* and remaining rows/cells are values.
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java[tags=xls]
+----
+
+
+******
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
+=====
+****
+
+=== Creating a `CSV` dataset
+
+****
+Given ::
+=====
+The following dataset icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+.src/test/resources/dataset/csv/USER.csv
+----
+include::../../../src/test/resources/datasets/csv/USER.csv[]
+----
+[discrete]
+[discrete]
+.src/test/resources/dataset/csv/TWEET.csv
+----
+include::../../../src/test/resources/datasets/csv/TWEET.csv[]
+----
+[discrete]
+[discrete]
+NOTE: File name is *table name* and first row is *column names*.
+[discrete]
+[discrete]
+.src/test/resources/dataset/csv/table-ordering.txt
+----
+include::../../../src/test/resources/datasets/csv/table-ordering.txt[]
+----
+[discrete]
+[discrete]
+IMPORTANT: CSV datasets are composed by multiple files (one per table) and a table ordering descriptor declaring the order of creation.
+[discrete]
+Also note that each csv dataset must be declared in its own folder because DBUnit will read all csv files present in dataset folder.
+
+
+******
+
+=====
+When ::
+=====
+The following test is executed: icon:thumbs-up[role="green",title="Passed"]
+******
+
+[discrete]
+[source,java,indent=0]
+----
+include::../../../src/test/java/com/github/database/rider/core/format/DataSetFormatIt.java[tags=csv]
+----
+[discrete]
+<1> You need to declare just one csv dataset file. Database rider will take parent folder as dataset folder.
+
+
+******
+
+=====
+Then ::
+=====
+The database should be seeded with the dataset content before test execution icon:thumbs-up[role="green",title="Passed"]
 =====
 ****
 
